# defernowork-mcp

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: live-tests.yml  release.yml
docs/superpowers/plans/: 2026-04-27-mcp-spec-driven-tests-plan.md  2026-04-28-mcp-auth-e2e-bottle-plan.md
docs/superpowers/specs/: 2026-04-27-mcp-spec-driven-tests-design.md  2026-04-28-mcp-auth-e2e-bottle-design.md  2026-04-29-batch-atomicity-refactor-design.md  2026-04-29-batch-create-extension-design-SUPERSEDED.md  2026-04-29-batch-create-variant-design.md  2026-04-29-batch-trio-design-feedback.md  2026-04-29-orphan-reconciler-design.md
src/deferno_mcp/: __main__.py  server.py
src/defernowork_mcp/: __init__.py  __main__.py  audit.py  client.py  credentials.py  kanidm_oidc.py  oauth_callback.py  oauth_provider.py  oidc_client.py  redis_store.py  server.py
src/defernowork_mcp/tools/: __init__.py  auth.py  chores.py  comments.py  daily_plan.py  events.py  feedback.py  habits.py  items.py  saved_searches.py  tasks.py
tests/: conftest.py  endpoint_registry.py  inventory.py  spec_runner.py  test_client.py  test_client_contract.py  test_client_envelope_contract.py  test_client_transport.py  test_create_task_payload.py  test_daily_plan_tools.py  test_helpers.py  test_inventory.py  test_live_smoke.py  test_multi_user_auth.py  test_oauth_callback_debug_format.py  test_oauth_flow.py  test_oauth_provider_contract.py  test_redis_store.py  test_server.py  test_spec_runner.py  test_tools_contract.py
tests/e2e-bottle/: .env.e2e.example  README.md  WIP.md  conftest.py  docker-compose.e2e.yml  pytest.ini  test_self.py
tests/e2e-bottle/helpers/: browser_oauth.py  claude_code.py  test_claude_code_parser.py
tests/e2e-bottle/runner/: Dockerfile  capture-url.sh  requirements.txt
tests/spec/oauth/: as_metadata.json  authorize.json  prm_metadata.json  register.json  revoke.json  token.json
tests/spec/v0.1/: _envelope.json
tests/spec/v0.1/admin/: stats.json  users_list.json
tests/spec/v0.1/auth/: connected_mcp.json  logout.json  me_get.json  me_patch.json  oidc_callback.json  oidc_login.json  oidc_register.json  settings_get.json  settings_patch.json  tokens_create.json  tokens_delete.json  tokens_list.json  tokens_rename.json
tests/spec/v0.1/chores/: create.json  delete.json  mark_next_done.json  occurrences_list.json  occurrences_set_status.json  patch.json
tests/spec/v0.1/comments/: delete.json  patch.json
tests/spec/v0.1/events/: create.json  delete.json  patch.json
tests/spec/v0.1/feedback/: attachment_get.json  create.json  list.json  patch.json  stats.json
tests/spec/v0.1/habits/: create.json  delete.json  occurrences_clear.json  occurrences_list.json  occurrences_mark.json  patch.json
tests/spec/v0.1/health/: get.json
tests/spec/v0.1/internal/: mcp_session.json
tests/spec/v0.1/items/: calendar.json  comments_create.json  comments_list.json  convert.json  delete.json  get.json  history.json  list.json  merge.json  move.json  pin.json  plan_add.json  plan_get.json  plan_remove.json  plan_reorder.json  split.json
tests/spec/v0.1/saved_searches/: create.json  delete.json  list.json  patch.json  reorder.json
tests/spec/v0.1/tasks/: batch.json  calendar.json  comments_create.json  comments_list.json  create.json  delete.json  export.json  (+19 more)
