[project]
name = "defernowork-mcp"
dynamic = ["version"]
description = "Model Context Protocol server for the Deferno task manager backend."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kyle Falconer" }]
keywords = ["mcp", "deferno", "defernowork", "defernowork.com", "deferno.work", "tasks", "productivity", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.0",
]

[project.urls]
Homepage = "https://deferno.work"
Repository = "https://github.com/Kyle-Falconer/defernowork-mcp"
"Bug Tracker" = "https://github.com/Kyle-Falconer/defernowork-mcp/issues"

[project.optional-dependencies]
http = [
    "uvicorn>=0.30.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[project.scripts]
defernowork-mcp = "defernowork_mcp.__main__:main"

[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/defernowork_mcp"]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = ["tests/e2e-bottle", ".git", ".venv"]
markers = [
    "live: integration test that hits real network/staging services (skipped by default)",
]

[tool.hatch.version.raw-options]
fallback_version = "0.0.0.dev0"
